overflow property fix

--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -9,7 +9,7 @@ $line-color: #ccc;
 body {
   padding: 30px 40px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 a {
